--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="light-panel">
         <div class="light-panel-top"></div>
         <div class="light-panel-center">
-          <h1><a href="forum.html">인기글</a></h1>
+          <h1><a href="미정.html">인기글</a></h1>
           <ul>
             <li><a href="#">+ Etiam nec neque nisiorn fauci</a></li>
             <li><a href="#">+ Proin suscipit justo euismod ino</a></li>
@@ -79,7 +79,7 @@
         <div class="dark-panel-center">
           <ul>
             <li>
-              <h1>공지사항</h1>
+              <h1><a href="announcement.html">공지사항</a></h1>
             </li>
             <li class="date">06-23-2012</li>
             <li class="news">Ut quis nibh nibh, eu interdum
@@ -111,8 +111,14 @@
           <h1><a href="forum.html">자유게시판</a></h1>
         </div>
         <div class="right-column-content-content">
-          
+          <ul>
+            <!-- Display the latest 10 forum posts with author name and timestamp -->
+            <li><a href="#">[작성자1] 게시물 제목1 - 2시간 전</a></li>
+            <li><a href="#">[작성자2] 게시물 제목2 - 1일 전</a></li>
+            <!-- Add more forum post entries here -->
+          </ul>
           <center><div class="button"><a href="forum.html" >더보기</a></div></center>
+        </div>
       </div>
     </div>
   </div>
